# sysid-neural-structures-fitting

./: .gitignore  pyproject.toml
examples/distillation_example/: distillation.py
examples/distillation_example/.ipynb_checkpoints/: distillation-checkpoint.ipynb
examples/distillation_example/data/: distill.txt
