[tool.poetry]
name = "sysid-neural-structures-fitting"
version = "0.1.0"
description = ""
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
numba = "^0.50.1"
scipy = "^1.5.2"
sympy = "^1.6.1"
pandas = "^1.1.0"
matplotlib = "^3.3.0"
ipython = "^7.17.0"
torch = "^1.6.0"
scikit-learn = "^0.23.2"
ipykernel = "^5.3.4"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
